--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
-    "@types/react-intl": "^3.0.0",
-    "@types/react-router-dom": "^5.1.8",
-    "axios": "^0.21.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
+    "@types/react-intl": "^3.0.0",
+    "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.21.1",
     "concurrently": "5.1.0",
-    "typescript": "3.8.3",
-    "react-scripts": "^4.0.3"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "typescript": "3.8.3"
   },
   "devDependencies": {
     "nodemon": "2.0.3"
