--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "src/index.tsx",
   "prox": "http://localhost:5000",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "eject": "react-scripts eject",
     "start-front": "react-scripts start",
     "start-server": "nodemon ../server/server.js --watch ../server/*",
