--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "bookshelf-react-express-sqlite-app",
+  "name": "bookshelf-react-express-postgres-app",
   "version": "1.0.0",
   "description": "FE React bookshelf app",
-  "private": false,
   "license": "MIT",
   "browserslist": [
     "last 7 versions",
@@ -10,37 +9,40 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "main": "src/index.tsx",
+  "private": true,
   "prox": "http://localhost:5000",
   "scripts": {
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "eject": "react-scripts eject",
+    "build": "webpack --config ./webpack/webpack.prod.js",
+    "watch": "webpack --watch",
     "start-front": "react-scripts start",
     "start-server": "nodemon ../server/server.js --watch ../server/*",
     "dev": "BROWSER=safari concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
-    "start": "npm run start-front",
-    "test": "react-scripts test --env=jsdom"
+    "start": "webpack serve --open --config ./webpack/webpack.dev.js --port 3000"
   },
   "dependencies": {
+    "@types/core-js": "^2.5.5",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/react-intl": "^3.0.0",
     "@types/react-router-dom": "^5.3.0",
+    "acorn": "^8.5.0",
     "axios": "^0.21.1",
     "concurrently": "5.1.0",
+    "css-loader": "^6.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "typescript": "3.8.3"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "2.0.3",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^3.8.3",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0"
   }
 }
