--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "private": true,
   "prox": "http://localhost:5000",
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.prod.js",
+    "build": "webpack --config ./webpack.prod.js",
     "watch": "webpack --watch",
-    "start-front": "react-scripts start",
     "start-server": "nodemon ../server/server.js --watch ../server/*",
-    "dev": "BROWSER=safari concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
-    "start": "webpack serve --open --config ./webpack/webpack.dev.js --port 3000"
+    "start": "webpack serve --open --config ./webpack.dev.js --port 3000"
   },
   "dependencies": {
     "@types/core-js": "^2.5.5",
@@ -27,7 +25,6 @@
     "@types/react-router-dom": "^5.3.0",
     "acorn": "^8.5.0",
     "axios": "^0.21.1",
-    "concurrently": "5.1.0",
     "css-loader": "^6.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -36,7 +33,6 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.5.0",
-    "nodemon": "2.0.3",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "typescript": "^3.8.3",
