--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "build": "webpack --config ./webpack.prod.js",
     "watch": "webpack --watch",
-    "start-server": "nodemon ../server/server.js --watch ../server/*",
-    "start": "webpack serve --open --config ./webpack.dev.js --port 3000"
+    "dev": "webpack serve --open --config ./webpack.dev.js --port 3000"
   },
   "dependencies": {
     "@types/core-js": "^2.5.5",
@@ -23,9 +22,10 @@
     "@types/react-dom": "16.9.6",
     "@types/react-intl": "^3.0.0",
     "@types/react-router-dom": "^5.3.0",
-    "typescript": "^3.8.3",
     "acorn": "^8.5.0",
     "axios": "^0.21.1",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
     "css-loader": "^6.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -36,8 +36,7 @@
     "html-webpack-plugin": "^5.5.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1",
+    "typescript": "^3.8.3",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0"
   }
