--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "webpack --config ./webpack.prod.js",
     "watch": "webpack --watch",
     "dev": "webpack serve --open --config ./webpack.dev.js --port 3000",
-    "start": "node server.js"
+    "start": "serve -s build"
   },
   "dependencies": {
     "@types/core-js": "^2.5.5",
@@ -25,12 +25,13 @@
     "@types/react-router-dom": "^5.3.0",
     "acorn": "^8.5.0",
     "axios": "^0.21.1",
-    "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1",
     "css-loader": "^6.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "serve": "^13.0.2",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
